[package]
name = "fat32-vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
fatfs = { git = "https://github.com/os-module/rust-fatfs.git",default-features = false,features = ["alloc","lfn"] }
rvfs = { git = "https://github.com/Godones/rvfs.git" }
#rvfs = {path = "../rvfs"}
core2 = {version = "0.4.0",default-features = false,features = ["alloc"]}
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
rand = "0.8.5"